WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125700
[CSS Shapes] shape-outside animation does not handle 'auto' well
https://bugs.webkit.org/show_bug.cgi?id=125700
Summary
[CSS Shapes] shape-outside animation does not handle 'auto' well
Rob Buis
Reported
2013-12-13 12:48:17 PST
Right now using auto for shape-outside in a @-webkit-keyframes will crash.
Attachments
Patch
(4.30 KB, patch)
2013-12-13 12:53 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2
(453.84 KB, application/zip)
2013-12-13 13:58 PST
,
Build Bot
no flags
Details
Patch
(5.68 KB, patch)
2013-12-13 14:19 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2013-12-13 12:53:49 PST
Created
attachment 219184
[details]
Patch
Build Bot
Comment 2
2013-12-13 13:58:10 PST
Comment on
attachment 219184
[details]
Patch
Attachment 219184
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/48608221
New failing tests: fast/shapes/shape-outside-floats/shape-outside-animation.html
Build Bot
Comment 3
2013-12-13 13:58:11 PST
Created
attachment 219195
[details]
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-10 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Rob Buis
Comment 4
2013-12-13 14:19:49 PST
Created
attachment 219197
[details]
Patch
Rob Buis
Comment 5
2013-12-13 14:20:34 PST
Comment on
attachment 219197
[details]
Patch Now including updated test result.
Rob Buis
Comment 6
2013-12-16 06:53:57 PST
Landed in
r160623
.
Csaba Osztrogonác
Comment 7
2014-02-13 03:48:23 PST
Comment on
attachment 219197
[details]
Patch Cleared review? from
attachment 219197
[details]
so that this bug does not appear in
http://webkit.org/pending-review
. If you would like this patch reviewed, please attach it to a new bug (or re-open this bug before marking it for review again).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug