Source/WebCore/page/animation/CSSPropertyAnimation.cpp
@@ -146,6 +146,9 @@ static inline PassRefPtr<ClipPathOperation> blendFunc(const AnimationBase*, Clip
 #if ENABLE(CSS_SHAPES)
 static inline PassRefPtr<ShapeValue> blendFunc(const AnimationBase*, ShapeValue* from, ShapeValue* to, double progress)
 {
+    if (!from || !to)
+        return to;
+
     // FIXME Bug 102723: Shape-inside should be able to animate a value of 'outside-shape' when shape-outside is set to a BasicShape
     if (from->type() != ShapeValue::Shape || to->type() != ShapeValue::Shape)
         return to;
